--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -190,7 +190,7 @@
                   android:theme="@android:style/Theme.Material.Settings"
                   android:label="@string/systemui_tuner_qs_title"
                   android:process=":tuner"
-                  android:parentActivityName="com.dirtyunicorns.dutweaks.DirtyTweaks"
+                  android:parentActivityName="com.tesla.teslacoil.TeslaCoil"
                   android:exported="true">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
